# phylogentic-tree

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile.sh  edge.cpp  edge.hpp  gene.cpp  gene.hpp  genes_collector.cpp  genes_collector.hpp  main  main.cpp  output.txt  ptree  species.cpp  species.hpp  tree.cpp  utils.cpp  utils.hpp
